# ChessReviewer

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  build_portable.bat  check_build.bat  download_pieces.py  eco_interpolated.json  package-lock.json  package.json  requirements.txt  start.bat  test_acc.py  test_sacrifice.py
ai/: implementation_plan.md  task.md  walkthrough.md
backend/: analysis.py  chesscom.py  config.py  engine.py  main.py  openings.py
frontend/: analysis.js  app.js  board.js  index.html  styles.css  training.js
scratch/: test_clock.py  test_mate.py  test_mate_classification.py  test_sacrifice.py  test_sacrifice_file.py  test_threats.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: analysis.rs  config.rs  engine.rs  main.rs  openings.json  openings.rs  puzzles.json  server.rs
